# mariadb-connector-c-craftinfo

./: CMakeLists.txt  README.md
definition.darwin/set/: OTHER_CFLAGS
